--- a/styles.css
+++ b/styles.css
@@ -30,7 +30,7 @@ body {
 .circle {
     width: 100px;
     height: 80px;
-    background-color: #df2935;
+    background-color: #da404a;
     border-radius: 10%;
     margin: 20px auto;
     display: flex;
