--- a/styles.css
+++ b/styles.css
@@ -30,7 +30,8 @@ body {
 .circle {
     width: 100px;
     height: 80px;
-    background-color: #da404a;
+    /* background-color: #da404a; */
+    background-color: #2a9f41; 
     border-radius: 10%;
     margin: 20px auto;
     display: flex;
